Added Error Handling, Exceptions

--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
                 </div>
             </li>
             
+            <li>
+                <div class="movie">
+                    <img class="movie-poster"
+                         src="https://m.media-amazon.com/images/M/MV5BMTk0MTQ3NDQ4Ml5BMl5BanBnXkFtZTcwOTQ3OTQzMw@@._V1_SX300.jpg" alt="Borat Poster"/>
+                    <div class="movie-title">Borat</div>
+                    <div class="movie-year">2006</div>
+                </div>
+            </li>
+            
                 </ol>
             </div>
         </body>
